fixed alignment and warnings

--- a/src/styling/navBar.css
+++ b/src/styling/navBar.css
@@ -43,7 +43,9 @@
     background-color: rgb(133, 133, 133);
     overflow: hidden;
     font-size: 120%;
-    /* margin-top: 10px; */
+    position: sticky;
+    top:0;
+    z-index: 1;
 }
 .navBar-right{
     float:right;
